@@ -4,7 +4,7 @@ requires "Module::Pluggable" => "5.1";
 requires "Moo" => "2.000001";
 requires "Try::Tiny" => "0.22";
 requires "Unexpected" => "v0.38.0";
-requires "Web::ComposableRequest" => "v0.1.0";
+requires "Web::ComposableRequest" => "v0.2.0";
 requires "Web::Simple" => "0.030";
 requires "namespace::autoclean" => "0.26";
 requires "perl" => "5.010001";
