@@ -10,7 +10,7 @@ Module::Pluggable      = 5.1
 Moo                    = 2.000001
 Try::Tiny              = 0.22
 Unexpected             = v0.38.0
-Web::ComposableRequest = v0.1.0
+Web::ComposableRequest = v0.2.0
 Web::Simple            = 0.030
 
 [Prereqs / ConfigureRequires]
